routing_nat_gateway.tf

# allow internet access to Application nodes through nat #1
resource "aws_route_table" "nat_gw_1" {
  count  = "${local.nat_gw ? 1 : 0}"
  vpc_id = "${aws_vpc.default.id}"

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = "${aws_nat_gateway.nat_1.id}"
  }

  tags {
    Name = "Application to Internet through Nat #1"
    Namespace = "${var.namespace}"
  }
}
resource "aws_route_table_association" "app_1_subnet_to_nat_gw" {
  count          = "${local.nat_gw ? 1 : 0}"
  route_table_id = "${aws_route_table.nat_gw_1.id}"
  subnet_id      = "${aws_subnet.private_app_1.id}"
}

# allow internet access to Application nodes through nat #2
resource "aws_route_table" "nat_gw_2" {
  count = "${local.nat_gw_multi_az ? 1 : 0}"
  vpc_id = "${aws_vpc.default.id}"

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "${aws_nat_gateway.nat_2.id}"
  }

  tags {
    Name = "Application to Internet through Nat #2"
    Namespace = "${var.namespace}"
  }
}
resource "aws_route_table_association" "app_2_subnet_to_nat_gw" {
  count = "${local.nat_gw_multi_az ? 1 : 0}"
  route_table_id = "${aws_route_table.nat_gw_2.id}"
  subnet_id = "${aws_subnet.private_app_2.id}"
}
